--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,7 @@
 :root {
     --cor-de-fundo: #EBECEE;
     --branco: #FFFFFF;
+    --branco-acinzentado: #F9F9F9;
     --laranja-destaque: #EB9B00;
     --azul: #002F52;
     --azul-degrade: linear-gradient(97.54deg, #002F52 35.49%, #326589 165.37%);
