--- a/styles/banner.css
+++ b/styles/banner.css
@@ -21,7 +21,7 @@
     border-radius: 24px;
     color: var(--branco);
     padding: 1em;
-    width: 100%;
+    width: 23em;
 }
 
 .banner__pesquisa::placeholder {
@@ -44,9 +44,24 @@
     }
 
     .banner__pesquisa {
-        width: 55%;
+        width: 35em;
         padding: 1.3em;
         margin-top: 1em;
         border-radius: 21px;
+    }
+
+    .banner__pesquisa::placeholder {
+        background-position: 5em;
+    }
+}
+
+@media screen and (min-width: 1440px) {
+    .banner__pesquisa {
+        width: 44em;
+    }
+
+    .banner__pesquisa::placeholder {
+        font-size: 16px;
+        background-position: 7em;
     }
 }
