--- a/styles/rodape.css
+++ b/styles/rodape.css
@@ -50,3 +50,16 @@ hr {
         margin-left: 0.4em;   
     }
 }
+
+@media screen and (min-width: 1440px) {
+    .rodape {
+        background-color: var(--branco-acinzentado);
+        justify-content: space-around;
+        padding: 3em 0;
+    }
+
+    .lista-rodape {
+        border-left: 1px solid var(--cinza);
+        padding-left: 1em;
+    }
+}
