--- a/styles/carrossel.css
+++ b/styles/carrossel.css
@@ -127,6 +127,10 @@
     .swiper-button-next::after {
         content: url("../assets/Right-slider.svg");
     }
+
+    .botoes__ancora:active {
+        background-color: var(--azul);
+    }
 }
 
 @media screen and (min-width: 1440px) {
@@ -192,5 +196,10 @@
 
     .swiper-button-next::after {
         content: url("../assets/Right-slider.svg");
+    }
+
+    .swiper-slide:hover {
+        scale: 1.1;
+        transition: .5s;
     }
 }
